# sv-parser

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/ast/: decl.rs  expr.rs  mod.rs  module.rs  stmt.rs  types.rs
src/lexer/: scanner.rs  token.rs
src/parser/: declarations.rs  expressions.rs  items.rs  mod.rs  statements.rs  types.rs
src/preprocessor/: mod.rs
